<resources>
    <string name="app_name">Dr Travel</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="email">Email</string>
    <string name="katasandi">Kata Sandi</string>
    <string name="lupa">Lupa Kata Sandi ?</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="atau_masuk_">Atau masuk menggunakan akun lain</string>
    <string name="lupa_kata">Lupa Kata Sandi</string>
    <string name="masukkan_em">Masukkan Email yang Valid</string>
    <string name="proses">Proses</string>
    <string name="jika_anda_m">Jika Anda memberikan alamat email  yang benar, maka email seharusnya  sudah dikirimkan kepada Anda.</string>
    <string name="ok">Ok</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="nama">Nama</string>
    <string name="sudahpunya">Sudah punya akun ?</string>
    <string name="beranda">Beranda</string>
    <string name="wisata">Tampat Wisata</string>
    <string name="penanda">Penanda</string>
    <string name="lainnya">Lainnya</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_beranda">Fragment Beranda</string>
    <string name="fragment_wisata">Fragment Wisata</string>
    <string name="fragment_penanda">Fragment Penanda</string>
    <string name="fragment_lainnya">Fragment Lainnya</string>
    <string name="mau_ke_mana">Mau ke mana</string>
    <string name="ar">AR 3D</string>
    <string name="kuliner">Kuliner</string>
    <string name="hotel">Penginapan</string>
    <string name="masjid">Masjid</string>
    <string name="tempat_wisa">Tempat Wisata Populer di Makassar</string>
    <string name="dr_travel">DR Travel</string>
    <string name="rekomendasi">Rekomendasi tempat wisata untuk anda</string>
    <string name="benteng">Benteng Rotterdam</string>
</resources>
