<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity.RegisterActivity"
    android:fillViewport="true"
    android:scrollbars="none"
    android:paddingBottom="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ellipse0"
                android:layout_alignParentRight="true"
                android:layout_marginRight="-18dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="-16dp"/>

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ic_ellipse0"
                android:layout_alignParentRight="true"
                android:layout_marginRight="74dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="18dp"/>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_ellipse0"
                android:layout_alignParentRight="true"
                android:layout_marginRight="55dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="46dp"/>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_ellipse0"
                android:layout_alignParentRight="true"
                android:layout_marginRight="59dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="74dp"/>

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_ellipse0"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="75dp"/>

            <TextView
                android:id="@+id/buat_akun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="103dp"
                android:text="@string/buat_akun"
                android:textAppearance="@style/selamat_dat"
                android:gravity="top"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_medium"/>

            <EditText
                android:id="@+id/et_nama_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="181dp"
                android:background="@drawable/bg_edittext"
                android:elevation="4dp"
                android:layout_marginHorizontal="40dp"
                android:paddingHorizontal="26dp"
                android:paddingVertical="14.5dp"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/nama"/>

            <EditText
                android:id="@+id/et_email_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="255dp"
                android:background="@drawable/bg_edittext"
                android:elevation="4dp"
                android:layout_marginHorizontal="40dp"
                android:paddingHorizontal="26dp"
                android:paddingVertical="14.5dp"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/email"/>

            <EditText
                android:id="@+id/et_pass_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="329dp"
                android:background="@drawable/bg_edittext"
                android:elevation="4dp"
                android:layout_marginHorizontal="40dp"
                android:paddingHorizontal="26dp"
                android:paddingVertical="14.5dp"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/katasandi"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_panjang_ripple"
                android:layout_alignParentTop="true"
                android:layout_marginTop="403dp"
                android:elevation="4dp"
                android:text="@string/daftar"
                android:textAppearance="@style/daftar_regis"
                android:layout_marginHorizontal="40dp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="485dp"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/tv_sudah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sudahpunya"
                    android:textAppearance="@style/sudah_punya"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/masuk"
                    android:textAppearance="@style/masuk_regis"
                    android:layout_toRightOf="@id/tv_sudah"
                    android:layout_marginLeft="5dp"/>
            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="539dp"
                android:text="@string/atau_masuk_"
                android:textAppearance="@style/atau_masuk_"/>

            <ImageView
                android:id="@+id/fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toLeftOf="@id/batas"
                android:layout_marginRight="12dp"
                android:layout_marginTop="591dp"
                android:background="@drawable/btn_fb_ripple"
                android:clickable="true"/>

            <View
                android:id="@+id/batas"
                android:layout_width="1dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="591dp"/>

            <ImageView
                android:id="@+id/google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@id/batas"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="591dp"
                android:background="@drawable/btn_google_ripple"
                android:clickable="true"/>
        </RelativeLayout>


    </LinearLayout>

</ScrollView>

