<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassActivity.ForgetPassActivity2">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ellipse0"
        android:layout_alignParentRight="true"
        android:layout_marginRight="-18dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-16dp"/>

    <ImageView
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:src="@drawable/ic_ellipse0"
        android:layout_alignParentRight="true"
        android:layout_marginRight="74dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"/>

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_ellipse0"
        android:layout_alignParentRight="true"
        android:layout_marginRight="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"/>

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_ellipse0"
        android:layout_alignParentRight="true"
        android:layout_marginRight="59dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="74dp"/>

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_ellipse0"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"/>

    <TextView
        android:id="@+id/lupa_kata_sandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="103dp"
        android:text="@string/lupa_kata"
        android:textAppearance="@style/selamat_dat"
        android:gravity="top"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_medium"/>

    <androidx.cardview.widget.CardView
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp"
        android:background="@drawable/rectangle_1"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/jika_anda_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jika_anda_m"
                android:textAppearance="@style/jika_anda_m"
                android:gravity="top"
                android:layout_marginTop="18dp"
                android:layout_marginHorizontal="16dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_Ok_lupa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="360dp"
        android:background="@drawable/btn_panjang_ripple"
        android:elevation="4dp"
        android:text="@string/ok"
        android:textAppearance="@style/masuk"/>

</RelativeLayout>