<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".Dashboard.BerandaActivity.HomeFragment">

        <include layout="@layout/toolbar"
            android:id="@+id/toolbar"/>

        <ImageView
            android:id="@+id/gambar"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_below="@id/toolbar"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="21dp"
            android:src="@drawable/gambar" />

        <EditText
            android:id="@+id/et_tabSearch"
            android:layout_below="@id/gambar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_tab_search"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/mau_ke_mana"/>

        <LinearLayout
            android:id="@+id/container_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/et_tabSearch"
            android:layout_marginTop="27dp"
            android:layout_marginHorizontal="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_subMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/card_AR"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingBottom="11dp"-->
<!--                android:elevation="4dp"-->
<!--                app:cardCornerRadius="12dp"-->
<!--                android:background="@color/cardView"-->
<!--                android:layout_marginHorizontal="10dp">-->

<!--                <RelativeLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content">-->

<!--                    <ImageView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:src="@drawable/ic_qr"-->
<!--                        android:layout_marginTop="20dp"-->
<!--                        android:layout_marginHorizontal="16dp"-->
<!--                        android:layout_marginBottom="30dp"/>-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/ar"-->
<!--                        android:layout_centerHorizontal="true"-->
<!--                        android:layout_marginTop="73dp"-->
<!--                        android:textAppearance="@style/ar_maps"/>-->

<!--                </RelativeLayout>-->

<!--            </androidx.cardview.widget.CardView>-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/card_kuliner"-->
<!--                android:layout_toRightOf="@id/card_AR"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginHorizontal="10dp"-->
<!--                android:paddingBottom="11dp"-->
<!--                android:elevation="4dp"-->
<!--                app:cardCornerRadius="12dp"-->
<!--                android:background="@color/cardView">-->

<!--                <RelativeLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content">-->

<!--                    <ImageView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:src="@drawable/ic_kuliner"-->
<!--                        android:layout_marginTop="20dp"-->
<!--                        android:layout_marginHorizontal="16dp"-->
<!--                        android:layout_marginBottom="35dp"/>-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/kuliner"-->
<!--                        android:layout_centerHorizontal="true"-->
<!--                        android:layout_marginTop="73dp"-->
<!--                        android:textAppearance="@style/ar_maps"/>-->

<!--                </RelativeLayout>-->

<!--            </androidx.cardview.widget.CardView>-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/card_hotel"-->
<!--                android:layout_toRightOf="@id/card_kuliner"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginHorizontal="10dp"-->
<!--                android:paddingBottom="11dp"-->
<!--                android:elevation="4dp"-->
<!--                app:cardCornerRadius="12dp"-->
<!--                android:background="@color/cardView">-->

<!--                <RelativeLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content">-->

<!--                    <ImageView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:src="@drawable/ic_hotel"-->
<!--                        android:layout_marginTop="20dp"-->
<!--                        android:layout_marginHorizontal="16dp"-->
<!--                        android:layout_marginBottom="30dp"/>-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/hotel"-->
<!--                        android:layout_centerHorizontal="true"-->
<!--                        android:layout_marginTop="73dp"-->
<!--                        android:textAppearance="@style/ar_maps"/>-->

<!--                </RelativeLayout>-->

<!--            </androidx.cardview.widget.CardView>-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/card_masjid"-->
<!--                android:layout_toRightOf="@id/card_hotel"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginHorizontal="10dp"-->
<!--                android:paddingBottom="11dp"-->
<!--                android:elevation="4dp"-->
<!--                app:cardCornerRadius="12dp"-->
<!--                android:background="@color/cardView">-->

<!--                <RelativeLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content">-->

<!--                    <ImageView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginHorizontal="16dp"-->
<!--                        android:layout_marginTop="20dp"-->
<!--                        android:layout_marginBottom="30dp"-->
<!--                        android:src="@drawable/ic_masjid" />-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_centerHorizontal="true"-->
<!--                        android:layout_marginTop="73dp"-->
<!--                        android:text="@string/masjid"-->
<!--                        android:textAppearance="@style/ar_maps" />-->

<!--                </RelativeLayout>-->

<!--            </androidx.cardview.widget.CardView>-->

        </LinearLayout>



        <TextView
            android:id="@+id/tempat_wisa"
            android:layout_below="@id/container_card"
            android:layout_alignStart="@id/container_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/tempat_wisa"
            android:textAppearance="@style/tempat_wisa"
            android:gravity="top"
            android:layout_alignLeft="@id/container_card" />

        <TextView
            android:id="@+id/rekomendasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tempat_wisa"
            android:layout_below="@id/tempat_wisa"
            android:layout_marginTop="6dp"
            android:text="@string/rekomendasi"
            android:textAppearance="@style/rekomendasi"
            android:gravity="top"
            android:layout_alignLeft="@id/tempat_wisa" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_wisata_menarik"
            android:layout_below="@id/rekomendasi"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

</ScrollView>

